--- a/OnlyPan/OnlyPan.csproj
+++ b/OnlyPan/OnlyPan.csproj
@@ -6,4 +6,11 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Repositories\" />
+      <Folder Include="Scripts\" />
+      <Folder Include="Services\" />
+      <Folder Include="Utilities\" />
+    </ItemGroup>
+
 </Project>
