Added tailwind support, and modified the _Layout.cshtml to tie general navbar

--- a/OnlyPan/appsettings.json
+++ b/OnlyPan/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "OnlyPanContext" : "Server=localhost;Database=OnlyPan;Trust Server Certificate = True; User = santorar; Password=Sa1234567"
+  }
 }
