--- a/OnlyPan/package.json
+++ b/OnlyPan/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.6",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3"
   },
@@ -45,6 +46,7 @@
     "mz": "^2.7.0",
     "nanoid": "^3.3.6",
     "normalize-path": "^3.0.0",
+    "normalize.css": "^8.0.1",
     "object-assign": "^4.1.1",
     "object-hash": "^3.0.0",
     "once": "^1.4.0",
@@ -79,7 +81,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-      "css:build": "npx tailwindcss -i ./wwwroot/css/site.css -o ./wwwroot/css/styles.css --minify"
+    "css:build": "npx tailwindcss -i ./wwwroot/css/site.css -o ./wwwroot/css/styles.css --minify"
   },
   "author": "",
   "license": "ISC",
