--- a/OnlyPan/package.json
+++ b/OnlyPan/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.6",
+    "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3"
   },
@@ -81,7 +82,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "css:build": "npx tailwindcss -i ./wwwroot/css/site.css -o ./wwwroot/css/styles.css --minify"
+    "css:build": "npx tailwindcss -i ./wwwroot/css/site.css -o ./wwwroot/css/styles.css"
   },
   "author": "",
   "license": "ISC",
