--- a/OnlyPan/OnlyPan.csproj
+++ b/OnlyPan/OnlyPan.csproj
@@ -21,6 +21,9 @@
   <ItemGroup>
     <UpToDateCheckBuilt Include="wwwroot/css/site.css" Set="Css"/>
   </ItemGroup>
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Feed\Index.cshtml" />
+  </ItemGroup>
   <Target Name="Tailwind" BeforeTargets="Build">
     <Exec Command="npm run css:build"/>
   </Target>
