--- a/OnlyPan/appsettings.json
+++ b/OnlyPan/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "OnlyPanContext": "Server=localhost;Database=OnlyPan;Trust Server Certificate = True; User=Tato; Password=Santiagonaranjo1"
+    "OnlyPanContext": "Server=localhost;Database=OnlyPanDB;Trust Server Certificate = True; User=santorar; Password=Sas12345678"
   }
 }
