--- a/OnlyPan/appsettings.json
+++ b/OnlyPan/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "OnlyPanContext": "Server=localhost;Database=OnlyPanDB;Trust Server Certificate = True; User=Tato; Password=Santiagonaranjo1"
+    "OnlyPanContext": "Server=tcp:onlypan.database.windows.net,1433;Initial Catalog=OnlyPanDB;Persist Security Info=False;User ID=app;Password=Sas12345678;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   }
 }
